{
  "version": 4,
  "terraform_version": "1.14.1",
  "serial": 11,
  "lineage": "cb0eacd7-5929-8f88-ac35-60563ec11406",
  "resources": [
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "http_from_all",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "80"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2025-10-05T04:07:18.786-07:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/sesac-effi3elov3/global/firewalls/knu-effi3elov3-http-all",
            "log_config": [],
            "name": "knu-effi3elov3-http-all",
            "network": "https://www.googleapis.com/compute/v1/projects/sesac-effi3elov3/global/networks/knu-effi3elov3-vpc",
            "params": [],
            "priority": 1000,
            "project": "sesac-effi3elov3",
            "self_link": "https://www.googleapis.com/compute/v1/projects/sesac-effi3elov3/global/firewalls/knu-effi3elov3-http-all",
            "source_ranges": [
              "0.0.0.0/0"
            ],
            "source_service_accounts": [],
            "source_tags": [],
            "target_service_accounts": [],
            "target_tags": [
              "knu-effi3elov3-tag"
            ],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "google_compute_network.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "ssh_from_home",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "22"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2025-10-05T04:07:18.558-07:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/sesac-effi3elov3/global/firewalls/knu-effi3elov3-ssh-home",
            "log_config": [],
            "name": "knu-effi3elov3-ssh-home",
            "network": "https://www.googleapis.com/compute/v1/projects/sesac-effi3elov3/global/networks/knu-effi3elov3-vpc",
            "params": [],
            "priority": 1000,
            "project": "sesac-effi3elov3",
            "self_link": "https://www.googleapis.com/compute/v1/projects/sesac-effi3elov3/global/firewalls/knu-effi3elov3-ssh-home",
            "source_ranges": [
              "61.80.203.117/32"
            ],
            "source_service_accounts": [],
            "source_tags": [],
            "target_service_accounts": [],
            "target_tags": [
              "knu-effi3elov3-tag"
            ],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "google_compute_network.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_instance",
      "name": "redirector",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 6,
          "attributes": {
            "boot_disk": [
              {
                "auto_delete": true,
                "device_name": "persistent-disk-0",
                "force_attach": false,
                "guest_os_features": [
                  "VIRTIO_SCSI_MULTIQUEUE",
                  "SEV_CAPABLE",
                  "SEV_SNP_CAPABLE",
                  "SEV_LIVE_MIGRATABLE",
                  "SEV_LIVE_MIGRATABLE_V2",
                  "IDPF",
                  "TDX_CAPABLE",
                  "UEFI_COMPATIBLE",
                  "GVNIC"
                ],
                "initialize_params": [
                  {
                    "architecture": "X86_64",
                    "enable_confidential_compute": false,
                    "image": "https://www.googleapis.com/compute/v1/projects/ubuntu-os-cloud/global/images/ubuntu-2204-jammy-v20251203",
                    "provisioned_iops": 0,
                    "provisioned_throughput": 0,
                    "size": 10,
                    "type": "pd-balanced"
                  }
                ],
                "mode": "READ_WRITE",
                "source": "https://www.googleapis.com/compute/v1/projects/sesac-effi3elov3/zones/asia-northeast3-a/disks/knu-effi3elov3-vm"
              }
            ],
            "can_ip_forward": false,
            "cpu_platform": "Intel Broadwell",
            "creation_timestamp": "2025-12-11T02:42:51.944-08:00",
            "current_status": "RUNNING",
            "deletion_protection": false,
            "effective_labels": {
              "component": "redirector",
              "goog-terraform-provisioned": "true",
              "project": "stiletto",
              "safeonly": "true"
            },
            "enable_display": false,
            "id": "projects/sesac-effi3elov3/zones/asia-northeast3-a/instances/knu-effi3elov3-vm",
            "instance_id": "1845798190362074820",
            "label_fingerprint": "jMrzqxRIuFs=",
            "labels": {
              "component": "redirector",
              "project": "stiletto",
              "safeonly": "true"
            },
            "machine_type": "e2-micro",
            "metadata": {
              "block-project-ssh-keys": "true",
              "ssh-keys": "ubuntu:ssh-ed25519 AAAAC3NzaC1lZDI1NTE5AAAAIK1ezXzMWplQ3NAK3MSWB9Z5++PdWK3PUuNbEUTYyadJ stiletto",
              "startup-script": "#!/usr/bin/env bash\nset -euxo pipefail\napt-get update -y\nDEBIAN_FRONTEND=noninteractive apt-get install -y nginx\n\ncat \u003e/var/www/html/index.html \u003c\u003c'HTML'\n\u003c!doctype html\u003e\n\u003chtml\u003e\u003chead\u003e\u003cmeta charset=\"utf-8\"\u003e\u003ctitle\u003eStiletto Redirector (GCP)\u003c/title\u003e\u003c/head\u003e\n\u003cbody\u003e\n  \u003ch1\u003eStiletto Minimal Redirector (GCP)\u003c/h1\u003e\n  \u003cp\u003eThis VM serves a basic [...]
            },
            "metadata_fingerprint": "bGwSWRQ34qo=",
            "name": "knu-effi3elov3-vm",
            "network_interface": [
              {
                "access_config": [
                  {
                    "nat_ip": "34.64.41.167",
                    "network_tier": "PREMIUM"
                  }
                ],
                "internal_ipv6_prefix_length": 0,
                "name": "nic0",
                "network": "https://www.googleapis.com/compute/v1/projects/sesac-effi3elov3/global/networks/knu-effi3elov3-vpc",
                "network_ip": "10.20.1.4",
                "queue_count": 0,
                "stack_type": "IPV4_ONLY",
                "subnetwork": "https://www.googleapis.com/compute/v1/projects/sesac-effi3elov3/regions/asia-northeast3/subnetworks/knu-effi3elov3-subnet",
                "subnetwork_project": "sesac-effi3elov3"
              }
            ],
            "project": "sesac-effi3elov3",
            "scheduling": [
              {
                "automatic_restart": true,
                "availability_domain": 0,
                "min_node_cpus": 0,
                "on_host_maintenance": "MIGRATE",
                "preemptible": false,
                "provisioning_model": "STANDARD"
              }
            ],
            "self_link": "https://www.googleapis.com/compute/v1/projects/sesac-effi3elov3/zones/asia-northeast3-a/instances/knu-effi3elov3-vm",
            "shielded_instance_config": [
              {
                "enable_integrity_monitoring": true,
                "enable_secure_boot": false,
                "enable_vtpm": true
              }
            ],
            "tags": [
              "knu-effi3elov3-tag"
            ],
            "tags_fingerprint": "yu6IQjgo7yE=",
            "terraform_labels": {
              "component": "redirector",
              "goog-terraform-provisioned": "true",
              "project": "stiletto",
              "safeonly": "true"
            },
            "zone": "asia-northeast3-a"
          },
          "sensitive_attributes": [
            [
              {
                "type": "get_attr",
                "value": "boot_disk"
              },
              {
                "type": "index",
                "value": {
                  "value": 0,
                  "type": "number"
                }
              },
              {
                "type": "get_attr",
                "value": "disk_encryption_key_raw"
              }
            ],
            [
              {
                "type": "get_attr",
                "value": "boot_disk"
              },
              {
                "type": "index",
                "value": {
                  "value": 0,
                  "type": "number"
                }
              },
              {
                "type": "get_attr",
                "value": "disk_encryption_key_rsa"
              }
            ]
          ],
          "identity_schema_version": 0,
          "dependencies": [
            "google_compute_network.this",
            "google_compute_subnetwork.public",
            "google_project_service.compute"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_network",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "auto_create_subnetworks": false,
            "bgp_always_compare_med": false,
            "bgp_best_path_selection_mode": "LEGACY",
            "delete_bgp_always_compare_med": false,
            "delete_default_routes_on_create": false,
            "enable_ula_internal_ipv6": false,
            "id": "projects/sesac-effi3elov3/global/networks/knu-effi3elov3-vpc",
            "mtu": 0,
            "name": "knu-effi3elov3-vpc",
            "network_firewall_policy_enforcement_order": "AFTER_CLASSIC_FIREWALL",
            "network_id": "4837063511220678581",
            "numeric_id": "4837063511220678581",
            "project": "sesac-effi3elov3",
            "routing_mode": "REGIONAL",
            "self_link": "https://www.googleapis.com/compute/v1/projects/sesac-effi3elov3/global/networks/knu-effi3elov3-vpc"
          },
          "identity_schema_version": 0
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_subnetwork",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2025-10-05T04:07:19.327-07:00",
            "gateway_address": "10.20.1.1",
            "id": "projects/sesac-effi3elov3/regions/asia-northeast3/subnetworks/knu-effi3elov3-subnet",
            "ip_cidr_range": "10.20.1.0/24",
            "name": "knu-effi3elov3-subnet",
            "network": "https://www.googleapis.com/compute/v1/projects/sesac-effi3elov3/global/networks/knu-effi3elov3-vpc",
            "private_ip_google_access": false,
            "private_ipv6_google_access": "DISABLE_GOOGLE_ACCESS",
            "project": "sesac-effi3elov3",
            "purpose": "PRIVATE",
            "region": "asia-northeast3",
            "self_link": "https://www.googleapis.com/compute/v1/projects/sesac-effi3elov3/regions/asia-northeast3/subnetworks/knu-effi3elov3-subnet",
            "stack_type": "IPV4_ONLY",
            "subnetwork_id": 2707455852114079624
          },
          "identity_schema_version": 0,
          "dependencies": [
            "google_compute_network.this"
          ]
        }
      ]
    }
  ]
}